party-deployment/hapi-fhir/ns-hapi-fhir.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: hapi-fhir
  name: hapi-fhir
